# MASA

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGES  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  _about2.html  _acknowledgments.html  _license.html  _license_l_g_p_l.html  _n_o_o_p.html  _references.html  add_sol.html  annotated.html  apif.html  auto_diff.html  bootstrap  burgers.html  classes.html  classmasa.html  cns.html  configure  configure.ac  dir_000004_000003.html  dir_07c2df013bb20677b8e65a9f18968d2c.html  dir_07c2df013bb20677b8e65a9f18968d2c_dep.map  dir_07c2df013bb20677b8e65a9f18968d2c_dep.md5  dir_1039887e85583dffdaaf153504bd29af.html  dir_1039887e85583dffdaaf153504bd29af_dep.map  dir_1039887e85583dffdaaf153504bd29af_dep.md5  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_4e8d938e9ddb5a617c200d5739d1f41a_dep.map  dir_4e8d938e9ddb5a617c200d5739d1f41a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+417 more)
build-aux/: .gitignore
doc/: Makefile  Makefile.am  Makefile.in
doxygen/: Makefile.am  add_sol.page  aminclude.am  auto_diff.page  fortran_interface.page  heat.page  install.page  masa.dox  masa.dox.in  masa.page  masa.sty  readme  tutorial.page
doxygen/solutions/: burgers.page  cns.page  euler.page  heat.page  laplace.page  rans_sa.page  sod.page
doxygen/txt_common/: about_vpath.page
doxygen/txt_common.local/: gpl.page
examples/: 2nd_der.cpp  Makefile.am  ablation_example.cpp  burgers_example.cpp  c_euler_example.c  c_euler_example.cpp  c_heat_example.c  c_heat_example.cpp  c_init.sh  c_laplace_example.c  ceuler_example.c  cg.cpp  compressible_navier_stokes.cpp  compressible_navier_stokes_example.cpp  cp_gaussian.cpp  display_solutions.cpp  euler_chem.cpp  euler_example.cpp  euler_example1d.cpp  euler_transient.cpp  examples.h  f_cns.f90  f_cns_4d.f90  f_euler.f90  f_init.sh  f_insh.f90  f_laplace.f90  fans_sa.cpp  fans_sa_finite_d.cpp  fans_sa_wall.cpp  finalize.sh  heat-eq.cpp  init.sh  laplace_example.cpp  laplacian.c  masa.f90  masa_shell.cpp  my3d.cc  navier_stokes_transient.py  radiation.cpp  (+5 more)
include/: masa.h
lib/: Makefile.am
m4/: ax_add_am_ctagsflags.m4  ax_check_enable_debug.m4  ax_prog_cc_c99_cflags.m4  config_summary.m4  masa_warn.m4  masa_warn_all.m4  swig.m4
m4/common/: ax_cxx_minopt.m4  ax_fc_minopt.m4  ax_prog_doxygen.m4  ax_trilinos_base.m4  ax_trilinos_epetra.m4  boost.m4  coverage.m4  grvy.m4  hdf5.m4  hpct.m4  libmesh.m4  queso.m4  vexcl.m4
masa/: Makefile.am  config.h.in  makefile.hardcoded  masa.h  masa_class.cpp  masa_cns.cpp  masa_core.cpp  masa_euler.cpp  masa_heat.cpp  masa_internal.h  masa_map.cpp  masa_shell.cpp
src/: Makefile.am  __init__.py  ablation.cpp  ad_cns_2d_crossterms.cpp  ad_cns_3d_crossterms.cpp  ad_cns_3d_les.cpp  ad_cns_3d_les_smag.cpp  ad_cns_3d_les_sph.cpp  ad_masa.h  autoimport.pl  axi_cns.cpp  axi_cns_transient.cpp  axi_euler.cpp  axi_euler_transient.cpp  burgers_equation.cpp  cmasa.cpp  cmasa.h  cns.cpp  compare_types.h  convdiff_steady_nosource_1d.cpp  cp_normal.cpp  dualnumber.h  dualnumberarray.h  dualshadow.h  dualshadowarray.h  error.cpp  euler.cpp  euler_chem.cpp  euler_transient.cpp  euler_transient_2d.cpp  euler_transient_3d.cpp  fans_sa.cpp  heat.cpp  laplace.cpp  main.f90  masa.f90  masa.h  masa.h.in  masa.i  masa_class.cpp  (+25 more)
src/import/: gen.pl  internal.pl  mak.pl  masa_import.pl  readme  revert.sh  sar.pl
src/import/examples/: analytical_solution.cpp  source_terms.cpp  variables.var
src/import/examples/automatic_differentiation_example/: analytical_solution.cpp  source_terms.cpp
src/import/examples/automatic_differentiation_example/2d_example/: analytical_solution.cpp  variables.var
src/import/examples/automatic_differentiation_example/3d_example/: analytical_solution.cpp  source_terms.cpp  variables.var
src/import/examples/automatic_differentiation_example/incompressible_navier_stokes/: analytical_solution.cpp  source_terms.cpp  variables.var
src/import/examples/maple_example/: analytical_solution.cpp  variables.var
tests/: Euler_1d_source.C  Euler_1d_source.cpp  Euler_2d_e_code.C  Euler_2d_rho_code.C  Euler_2d_source.C  Euler_2d_source.cpp  Euler_2d_u_code.C  Euler_2d_v_code.C  Euler_3d_source.C  Euler_3d_source.cpp  Makefile.am  Navier-Stokes_2d_compressible_source.C  Navier-Stokes_2d_compressible_source.cpp  Navier-Stokes_3d_compressible_source.C  Navier-Stokes_3d_compressible_source.cpp  ablation.cpp  ad_cns.cpp  ad_cns_crossterm.cpp  ad_cns_les.cpp  ad_cns_les_sph.cpp  ad_divgradsimple  ad_divgradsimple.cpp  ad_euler.cpp  ad_init.sh  ad_ins.cpp  axi_cns.cpp  axi_euler.cpp  c_array.c  c_axi_euler.c  c_cns2d.c  c_cns3d.c  c_euler1d.c  c_euler2d.c  c_euler3d.c  c_euler_chem_1d.c  c_heat.c  c_heat1dsc.c  c_heat2dsc.c  c_heat3dsc.c  c_laplace.c  (+76 more)
tests/maple/: mapletest.mw  parser.cpp
tutorial/: Makefile.am  cg.c  laplacian.c  laplacian.h  laplacian_utils.c
