## Process this file with automake to produce Makefile.in

AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
AM_LDFLAGS    =
bin_PROGRAMS  =
BUILT_SOURCES =
BUILT_DOCS    =
EXTRA_DIST    =

# Required for AX_AM_MACROS
@INC_AMINCLUDE@
